--- a/assests/style.css
+++ b/assests/style.css
@@ -3,5 +3,56 @@
 }
 
 body {
-  margin: 0px;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  row-gap: 30px;
+  margin-right: 50px;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-color: #38b000;
+  border-style: solid;
+  border-width: 10px;
+  padding: 30px;
+  margin: 10px 50px;
+}
+
+.title {
+  text-align: center;
+}
+
+.paragraph {
+  text-align: center;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.start-btn {
+  background-color: #44c767;
+  border-radius: 15px;
+  border: 4px solid #18ab29;
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 21px;
+  padding: 15px;
+  position: absolute;
+}
+
+.start-btn:hover {
+  background-color: #5cbf2a;
+}
+.start-btn:active {
+  position: relative;
+  top: 1px;
 }
