--- a/assests/style.css
+++ b/assests/style.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  text-align: center;
 }
 
 .header {
@@ -11,6 +12,7 @@ body {
   justify-content: space-around;
   row-gap: 30px;
   margin-right: 50px;
+  font-size: 20px;
 }
 
 .container {
@@ -19,7 +21,7 @@ body {
   justify-content: center;
   border-color: #38b000;
   border-style: solid;
-  border-width: 10px;
+  border-width: 2px;
   padding: 30px;
   margin: 10px 50px;
 }
@@ -32,25 +34,13 @@ body {
   text-align: center;
 }
 
-.btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .start-btn {
-  background-color: #44c767;
-  border-radius: 15px;
-  border: 4px solid #18ab29;
-  cursor: pointer;
-  color: #ffffff;
-  font-size: 21px;
-  padding: 15px;
-  position: absolute;
+  border-radius: 5px;
+  border-color: green;
 }
 
 .start-btn:hover {
-  background-color: #5cbf2a;
+  background-color: #80da54;
 }
 .start-btn:active {
   position: relative;
