--- a/assests/style.css
+++ b/assests/style.css
@@ -4,16 +4,19 @@
 
 body {
   text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  row-gap: 30px;
-  margin-right: 50px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px;
   font-size: 20px;
 }
+
+/* Initial front page style */
 
 .container {
   display: flex;
@@ -22,7 +25,7 @@ body {
   border-color: #38b000;
   border-style: solid;
   border-width: 2px;
-  padding: 30px;
+  padding: 10px;
   margin: 10px 50px;
 }
 
