--- a/assests/style.css
+++ b/assests/style.css
@@ -19,7 +19,8 @@ body {
 /* Initial front page style */
 
 .container {
-  display: flex;
+  /* display: flex; */
+  display: none;
   flex-direction: row;
   justify-content: center;
   border-color: #38b000;
