--- a/assests/style.css
+++ b/assests/style.css
@@ -16,6 +16,21 @@ body {
   font-size: 20px;
 }
 
+/* Timer */
+.timer {
+  display: flex;
+  align-items: center;
+  width: 100px;
+  height: 45px;
+  background-color: aqua;
+  border-style: solid;
+  border-color: black;
+  border-radius: 5px;
+  font-weight: 400;
+  font-size: 17px;
+  padding: 0 8px;
+}
+
 /* Initial front page style */
 
 .container {
@@ -23,7 +38,7 @@ body {
   display: none;
   flex-direction: row;
   justify-content: center;
-  border-color: #38b000;
+  background-color: #80da54;
   border-style: solid;
   border-width: 2px;
   padding: 10px;
@@ -39,8 +54,10 @@ body {
 }
 
 .start-btn {
-  border-radius: 5px;
-  border-color: green;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .start-btn:hover {
@@ -52,10 +69,16 @@ body {
   top: 1px;
 }
 
-.questions {
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 20px;
+.questions-section {
+  /* display: none; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 550px;
+  background-color: #80da54;
+  border-style: solid;
+  border-radius: 5px;
 }
 
 .answer-btn {
