--- a/assests/style.css
+++ b/assests/style.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  background-color: rgb(193, 235, 248);
 }
 
 .header {
@@ -21,9 +22,9 @@ body {
   align-items: center;
   width: 100px;
   height: 45px;
-  background-color: aqua;
   border-style: solid;
-  border-color: black;
+  border-color: blue;
+  background-color: #ffff;
   border-radius: 5px;
   font-weight: 400;
   font-size: 17px;
@@ -37,10 +38,11 @@ body {
   display: none;
   flex-direction: row;
   justify-content: center;
-  background-color: #80da54;
+  background-color: #ffff;
   border-style: solid;
+  height: 180px;
   border-width: 2px;
-  padding: 10px;
+  padding: 20px;
   margin: 10px 50px;
 }
 
@@ -60,7 +62,7 @@ body {
 }
 
 .start-btn:hover {
-  background-color: #80da54;
+  background-color: #78c4f7;
   cursor: pointer;
 }
 .start-btn:active {
@@ -75,13 +77,39 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 550px;
-  background-color: #80da54;
+  background-color: #ffff;
   border-style: solid;
+  border-color: rgb(4, 4, 172);
   border-radius: 5px;
+  padding: 20px 30px;
 }
 
-.option-list {
-  padding: 20px;
+.questions-section .question-text {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.questions-section .option-list {
+  padding: 20px 0px;
+  display: block;
+}
+
+section .option-list .option {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: aliceblue;
+  border: 1px;
+  border-style: solid;
+  border-color: #84c5fe;
+  border-radius: 7px;
+  margin-bottom: 15px;
+  padding: 8px 15px;
+}
+
+section .option-list .option:hover {
+  background: #cce5ff;
+  border-color: #b8daff;
 }
 
 .answer-btn {
