--- a/assests/style.css
+++ b/assests/style.css
@@ -7,6 +7,7 @@ body {
   background-color: rgb(193, 235, 248);
 }
 
+/* header containing nav bar */
 .header {
   display: flex;
   flex-direction: row;
@@ -70,6 +71,8 @@ body {
   top: 1px;
 }
 
+/* Quiz question styling */
+
 .questions-section {
   /* display: none; */
   position: absolute;
@@ -112,7 +115,7 @@ section .option-list .option:hover {
   border-color: #b8daff;
 }
 
-.answer-btn {
-  display: grid;
-  margin: 15px;
+.next-question {
+  height: 30px;
+  padding: 0px 13px;
 }
