created quit and restart buttons with html

--- a/assests/style.css
+++ b/assests/style.css
@@ -5,6 +5,7 @@
 body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: rgb(193, 235, 248);
+  text-align: center;
 }
 
 /* header containing nav bar */
@@ -35,35 +36,36 @@ body {
 /* Initial front page style */
 
 .container {
-  /* display: flex; */
+  display: flex;
   display: none;
   flex-direction: row;
   justify-content: center;
   background-color: #ffff;
   border-style: solid;
+  border-color: rgb(4, 4, 172);
   height: 180px;
   border-width: 2px;
   padding: 20px;
   margin: 10px 50px;
 }
 
-.title {
+/* .title {
   text-align: center;
 }
 
 .paragraph {
   text-align: center;
-}
+} */
 
 .start-btn {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  height: 50px;
+  width: 80px;
+  border-radius: 10px;
 }
 
 .start-btn:hover {
   background-color: #78c4f7;
+  border-color: black;
   cursor: pointer;
 }
 .start-btn:active {
@@ -74,7 +76,7 @@ body {
 /* Quiz question styling */
 
 .questions-section {
-  /* display: none; */
+  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
