--- a/assests/style.css
+++ b/assests/style.css
@@ -1,3 +1,6 @@
+:root {
+}
+
 * {
   box-sizing: border-box;
 }
@@ -33,43 +36,60 @@ body {
   padding: 0 8px;
 }
 
-/* Initial front page style */
-
-.container {
-  display: none;
-  justify-content: center;
-  background-color: #ffff;
-  border-style: solid;
-  border-color: rgb(4, 4, 172);
-  height: 180px;
-  border-width: 2px;
-  padding: 20px;
-  margin: 10px 50px;
-}
-
 /* Start button */
 .start-btn {
-  display: none;
-  height: 50px;
-  width: 80px;
-  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.start-btn:hover {
-  background-color: #78c4f7;
-  border-color: black;
+.start-btn button {
+  font-size: 25px;
+  font-weight: 400;
+  padding: 15px;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  background: #ffff;
+}
+
+.start-btn button:hover {
   cursor: pointer;
 }
 
-.start-btn:active {
-  position: relative;
-  top: 1px;
+.start-btn button:active {
+  background-color: rgb(162, 255, 235);
+}
+
+/* Initial front page style */
+
+.starter-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 550px;
+  background-color: rgb(255, 255, 255);
+  border-style: solid;
+  border-color: rgb(4, 4, 172);
+  border-radius: 5px;
+  padding: 20px 30px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
+.starter-container .activeStarter {
+  opacity: 1;
+  pointer-events: auto;
+  z-index: 5;
+  transform: translate(-50%, -50%) scale(1);
 }
 
 /* Quiz question styling */
 
 .questions-section {
-  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -80,6 +100,9 @@ body {
   border-color: rgb(4, 4, 172);
   border-radius: 5px;
   padding: 20px 30px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(0.9);
 }
 
 .questions-section .question-text {
@@ -117,7 +140,6 @@ section .option-list .option:hover {
 /* Results Page */
 
 .results-container {
-  /* display: none; */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -126,6 +148,9 @@ section .option-list .option:hover {
   width: 450px;
   padding: 25px 30px;
   border-radius: 15px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(0.9);
 }
 
 .score span p {
