added 2 buttons to initial page

--- a/assests/style.css
+++ b/assests/style.css
@@ -75,9 +75,9 @@ body {
   border-color: rgb(4, 4, 172);
   border-radius: 5px;
   padding: 20px 30px;
-  opacity: 0;
+  /* opacity: 0;
   pointer-events: none;
-  transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.9); */
 }
 
 .starter-container.activeStarter {
