continue and exit btns of 1st page now function

--- a/assests/style.css
+++ b/assests/style.css
@@ -83,7 +83,8 @@ body {
   transform: translate(-50%, -50%) scale(0.9);
 }
 
-.starter-container.activeStarter {
+.starter-container.activeStarter,
+.questions-section.activeQuiz {
   opacity: 1;
   pointer-events: auto;
   z-index: 5;
