--- a/assests/style.css
+++ b/assests/style.css
@@ -1,6 +1,7 @@
 :root {
   --background: #ffff;
   --border: rgb(0, 0, 255);
+  --hover:#cce5ff;
 }
 
 * {
@@ -136,10 +137,15 @@ section .option-list .option:active {
   padding: 0px 13px;
 }
 
-.next-question button:hover {
+.next-question:hover {
   background: #cce5ff;
   border-color: var(--border);
   cursor: pointer;
+}
+
+.next-question:active {
+  position: relative;
+  top: 1px;
 }
 
 .answer-alert-correct {
@@ -171,14 +177,15 @@ section .option-list .option:active {
   text-align: center;
 }
 
-.submit {
+.submit,
+.buttons button {
   margin: 20px;
   height: 30px;
   padding: 0px 13px;
 }
 
 .submit:hover{
-  background-color: #78c4f7;
+  background-color: var(--hover);
   border-color: var(--border);
   cursor: pointer;
 }
@@ -204,10 +211,10 @@ section .option-list .option:active {
   border-radius: 15px;
   text-align: center;
 }
-}
+
 
 .buttons button:hover {
-  background-color: #78c4f7;
+  background-color: var(--hover);
   border-color: var(--border);
   cursor: pointer;
 }
