--- a/assests/style.css
+++ b/assests/style.css
@@ -63,7 +63,7 @@ body {
 
 /* Initial front page style */
 
-.starter-container {
+.start-container {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -77,7 +77,7 @@ body {
   padding: 50px;
 }
 
-.starter-container.activeStarter,
+.start-container.activeStarter,
 .questions-section.activeQuestion {
   z-index: 5;
   opacity: 1;
