--- a/assests/style.css
+++ b/assests/style.css
@@ -42,12 +42,14 @@ body {
 /* Start button styling */
 .start-btn button {
   font-size: 25px;
-  font-weight: 400;
-  padding: 15px;
+  font-weight: 300;
+  padding: 10px;
+  margin-top: 10px;
   outline: none;
-  border: none;
+  border: solid;
+  border-color: black;
   border-radius: 10px;
-  background: var(--background);
+  background: rgb(139, 247, 247);
 }
 
 .start-btn button:hover {
@@ -68,7 +70,7 @@ body {
   border-color: var(--border);
   border-radius: 5px;
   text-align: center;
-  margin: 40px;
+  margin: 60px;
   max-height: 500px;
   padding: 50px;
 }
@@ -142,7 +144,7 @@ body {
   flex-direction: column;
   background-color: var(--background);
   width: 500px;
-  margin: 20px 200px;
+  margin: 50px 200px;
   padding: 25px 30px;
   border-radius: 15px;
   text-align: center;
